Fix scrollbars going over nav

--- a/src/scss/components/weather/_hourly-forecast.scss
+++ b/src/scss/components/weather/_hourly-forecast.scss
@@ -8,6 +8,8 @@
   &__wrap {
     display: flex;
     overflow-x: auto;
+    position: relative;
+    z-index: 1;
   }
 
   &__day {
